kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/vaccinator: "true"
        io.kompose.service: postgres
    spec:
      containers:
        - env:
            - name: DATABASE_HOST
              value: postgres
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
            - name: POSTGRES_DB
              value: vaccinator
            - name: POSTGRES_PASSWORD
              value: password
            - name: POSTGRES_USER
              value: solidbox
          image: postgres:13
          livenessProbe:
            exec:
              command:
                - 'pg_isready -U  -d '
            failureThreshold: 5
            periodSeconds: 5
            timeoutSeconds: 5
          name: postgres
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database-postgres
      restartPolicy: Always
      volumes:
        - name: database-postgres
          persistentVolumeClaim:
            claimName: database-postgres
status: {}
